# idlib-text

./: CMakeLists.txt  README.md  building-under-linux.md  building-under-windows-11-visual-studio-2022.md  integrating-into-cmake-projects.md
documentation/: idlib-text.md  idlib_utf8_decoder_get.md  idlib_utf8_decoder_initialize.md  idlib_utf8_decoder_next.md  idlib_utf8_decoder_set_input.md  idlib_utf8_decoder_uninitialize.md  idlib_utf8_encoder_get.md  idlib_utf8_encoder_initialize.md  idlib_utf8_encoder_next.md  idlib_utf8_encoder_set_input.md  idlib_utf8_encoder_uninitialize.md  unicode-code-point-to-utf-8.md
test/decode/: CMakeLists.txt
test/decode/sources/: main.c
test/encode/: CMakeLists.txt
test/encode/sources/: main.c
